# Multi_Model_RAG

./: 1-multimodelopenai.ipynb  README.md  app.py  multimodelgemini.ipynb  multimodelopenai.ipynb  pyproject.toml  requirements.txt
