[project]
name = "multi-model-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "transformers>=4.56.0",
]
